--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,16 @@
-<h2> {{ title }} Works! </h2>
+<div>
+  <mat-toolbar color="primary">
+    <button mat-icon-button (click)="nav.toggle()"><mat-icon>menu</mat-icon></button>
+    <h1> {{ title }} </h1>
+  </mat-toolbar>
+  <mat-sidenav-container>
+    <mat-sidenav #nav mode="over">
+      <mat-nav-list>
+        <a mat-list-item [routerLink]="'.'" *ngFor="let link of links"></a>
+      </mat-nav-list>
+    </mat-sidenav>
+    <mat-sidenav-content>
+      <router-outlet></router-outlet>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+</div>
