--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,9 @@
   <mat-sidenav-container>
     <mat-sidenav #nav mode="over">
       <mat-nav-list>
-        <a mat-list-item [routerLink]="'.'" *ngFor="let link of links"></a>
+        <a mat-list-item [routerLink]="link.path" *ngFor="let link of links">
+          {{ link.name }}
+        </a>
       </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
