--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
   <mat-sidenav-container>
     <mat-sidenav #nav mode="over">
       <mat-nav-list>
-        <a mat-list-item [routerLink]="link.path" *ngFor="let link of links">
+        <a mat-list-item [routerLink]="link.path" *ngFor="let link of links" [class.hide]="!link.show">
           {{ link.name }}
         </a>
       </mat-nav-list>
