--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -1,1 +1,38 @@
-<p>order works!</p>
+<h2>주문 완료</h2>
+
+<h4> {{ order?.when | date }} 에 {{ shopName }}에서 주문 </h4>
+<table mat-table [dataSource]="order?.foods ?? []" class="mat-elevation-z8">
+
+    <!--- Note that these columns can be defined in any order.
+          The actual rendered columns are set as a property on the row definition" -->
+
+    <!-- Position Column -->
+    <ng-container matColumnDef="position">
+        <th mat-header-cell *matHeaderCellDef> No. </th>
+        <td mat-cell *matCellDef="let elem"> {{ order?.foods?.findIndex(elem) }} </td>
+    </ng-container>
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef> 음식 이름 </th>
+        <td mat-cell *matCellDef="let elem"> {{ elem.name }} </td>
+        <td mat-footer-cell *matFooterCellDef> 총합 </td>
+    </ng-container>
+
+    <!-- Weight Column -->
+    <ng-container matColumnDef="price">
+        <th mat-header-cell *matHeaderCellDef> 가격 </th>
+        <td mat-cell *matCellDef="let elem"> {{ elem.price }} </td>
+        <td mat-footer-cell *matFooterCellDef> {{ totalPrice }} </td>
+    </ng-container>
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="count">
+        <th mat-header-cell *matHeaderCellDef> 수량 </th>
+        <td mat-cell *matCellDef="let elem"> {{ foodCount(elem) }} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
+</table>
