--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <div>
   <mat-toolbar color="primary">
     <button mat-icon-button (click)="nav.toggle()"><mat-icon>menu</mat-icon></button>
-    <h1> {{ title }} </h1>
+    <span> {{ title }} </span>
+    <span class="spacer"></span>
+    <button *ngIf="uid | async" (click)="logout()" mat-icon-button><mat-icon>logout</mat-icon></button>
   </mat-toolbar>
   <mat-sidenav-container>
     <mat-sidenav #nav mode="over">
